# BibbleVM

./: 404.html  CMakeLists.txt  CNAME  index.html  plan_for_gc.txt
.github/workflows/: deploy.yml
404/: index.html
architecture/: index.html
bbx-format/: index.html
docs/: spec.md  specification.md
framework/: CMakeLists.txt
framework/include/BibbleVM/: config.h
framework/include/BibbleVM/core/: vm.h
framework/include/BibbleVM/core/bytecode/: bytecode_reader.h  bytecode_stream.h  code_section.h  data_section.h  opcodes.h  section.h  strtab_section.h
framework/include/BibbleVM/core/bytecode/structs/: data_section.h
framework/include/BibbleVM/core/call/: callable_target.h  function.h
framework/include/BibbleVM/core/exec/: dispatch.h  interpreter.h
framework/include/BibbleVM/core/module/: module.h
framework/include/BibbleVM/core/stack/: frame.h  stack.h
framework/include/BibbleVM/core/value/: value.h
framework/include/BibbleVM/util/: string.h
framework/src/core/: vm.cpp
framework/src/core/bytecode/: bytecode_reader.cpp  bytecode_stream.cpp  code_section.cpp  data_section.cpp  section.cpp  strtab_section.cpp  structs.cpp
framework/src/core/call/: callable_target.cpp  function.cpp
framework/src/core/exec/: dispatch.cpp  interpreter.cpp
framework/src/core/module/: module.cpp
framework/src/core/stack/: frame.cpp  stack.cpp
instructions/: index.html
main/: CMakeLists.txt
main/src/: main.cpp
overview/: index.html
search/: search_index.json
spec/: build_docs.py  mkdocs.yml  requirements.txt  serve.py  spec_old.md
spec/data/: instructions.yaml
spec/docs/: architecture.md  index.md  overview.md
spec/docs/stylesheets/: extra.css
spec/templates/: instruction_page.md.j2  instructions.md.j2
